--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 management.endpoint.health.show-details = always
+spring.output.ansi.enabled=always
+
+server.port=9999
+
+login.username = test
+login.password = password
+
+##数据库url
+spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false
+##数据库用户名
+spring.datasource.username=mysql
+##数据库密码
+spring.datasource.password=123456
+##数据库驱动 scope = runtime
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+##日志级别
+logging.level.com.example.demo.mapper=debug
+##mybatis-plus mapper xml 文件地址
+mybatis-plus.mapper-locations=classpath*:mapper/*Mapper.xml
+##mybatis-plus type-aliases 文件地址
+mybatis-plus.type-aliases-package=com.demo.entity
