--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 server:
   port: 8080
 
+spring:
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 0
+
 management:
   endpoint:
     health:
