--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,12 @@ spring.datasource.username=mysql
 ##数据库密码
 spring.datasource.password=123456
 ##数据库驱动 scope = runtime
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 ##日志级别
-logging.level.com.example.demo.mapper=debug
+logging.level.com.example.demo.mapper=error
 ##mybatis-plus mapper xml 文件地址
 mybatis-plus.mapper-locations=classpath*:mapper/*Mapper.xml
 ##mybatis-plus type-aliases 文件地址
