--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.datasource.password=123456
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+## ES
+elasticsearch.cluster.name=es-tencent
+elasticsearch.cluster.host=10.32.16.129:9300;10.32.32.102:9300;10.32.16.119:9300
+
 
 ##日志级别
 logging.level.com.example.demo.mapper=error
