--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,13 @@ server.port=9999
 login.username = test
 login.password = password
 
-##数据库url
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false
-##数据库用户名
-spring.datasource.username=mysql
-##数据库密码
+## mysql url
+spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+## mysql username
+spring.datasource.username=rd
+## mysql password
 spring.datasource.password=123456
-##数据库驱动 scope = runtime
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+## driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## ES
@@ -21,9 +20,9 @@ elasticsearch.cluster.name=es-tencent
 elasticsearch.cluster.host=10.32.16.129:9300;10.32.32.102:9300;10.32.16.119:9300
 
 
-##日志级别
+## log level
 logging.level.com.example.demo.mapper=error
-##mybatis-plus mapper xml 文件地址
+##mybatis-plus mapper xml path
 mybatis-plus.mapper-locations=classpath*:mapper/*Mapper.xml
-##mybatis-plus type-aliases 文件地址
+##mybatis-plus type-aliases path
 mybatis-plus.type-aliases-package=com.demo.entity
